<resources>
    <string name="app_name">Just Java</string>
    <string name="order_button_text">order</string>
    <string name="quantity_label">quantity</string>
    <string name="price_label">order summary</string>
    <string name="quantity_picker_inc_text">+</string>
    <string name="quantity_picker_dec_text">-</string>
    <string name="topping_label">topping</string>
    <string name="whipped_cream_label">Whipped cream</string>
</resources>
