<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainLayoutAppearance"
    tools:context="com.example.android.justjava.MainActivity"
    >

    <TextView style="@style/labelAppearance"
        android:text="@string/topping_label"
        />

    <CheckBox style="@style/checkBoxAppearance"
        android:id="@+id/whipped_cream"
        android:text="@string/whipped_cream_label"
        />

    <TextView style="@style/labelAppearance"
        android:text="@string/quantity_label"
        />

    <!-- Here my first example of a nested ViewGroup -->
    <LinearLayout style="@style/nestedLayoutAppearance">

        <Button style="@style/quantityPickerAppearance"
            android:onClick="decrement"
            android:text="@string/quantity_picker_dec_text"
            />

        <TextView android:id="@+id/quantity_text_view"
            style="@style/quantityFieldAppearance"
            />

        <Button style="@style/quantityPickerAppearance"
            android:onClick="increment"
            android:text="@string/quantity_picker_inc_text"
            />

    </LinearLayout>

    <TextView style="@style/labelAppearance"
        android:text="@string/price_label"
        />

    <TextView android:id="@+id/order_summary_text_view"
        style="@style/fieldAppearance"
        />

    <Button android:id="@+id/order_button"
        style="@style/orderButtonAppearance"
        android:onClick="submitOrder"
        android:text="@string/order_button_text"
        />

</LinearLayout>
